Fix Admin shift notes

--- a/src/app/main/content/schedule/shift/admin-shift/staff/staff.component.scss
+++ b/src/app/main/content/schedule/shift/admin-shift/staff/staff.component.scss
@@ -42,22 +42,11 @@
                                 margin-right: 16px;
                             }
 
-                            .username {
-                                font-weight: 500;
-                                color: mat-color($accent)
-                            }
-
                             .message {
                                 font-weight: 500;
                             }
 
                             .time {
-                            }
-
-                            .delete-note {
-                                &:hover {
-                                    cursor: pointer;
-                                }
                             }
                         }
                     }
